feat(credential_issuance): #678 Enhancement of Credential Issuance Endpoint to Support OpenID4VCI 1.0 Features (#846)
* feat(nonce): #678 Enhancement of Credential Issuance Endpoint to Support OpenID4VCI 1.0 Features

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 clear the issue credetial endpoint

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 remove the credetial subject in the credetial metadata

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 remove unused code

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 removed unused metadata fields and added madatory field to issuer metadata

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 added mandatory field in the preauth code

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 updated the path logic in preauth code flow

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 updated the typos and validation mismatch for the proof jwt

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 removed unused logs

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 removed unused imports

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 add the credential definition to the issuer metadata

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 update loops and emun naming issues

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

* feat(nonce): #678 mock KeyMaterial for proof validatior

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>

---------

Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>